cambios finales de proyecto

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+@import "https://fonts.googleapis.com/css?family=Raleway";
+@import "https://fonts.googleapis.com/css?family=Niramit|Raleway";
+@import "https://fonts.googleapis.com/css?family=Niramit|Poppins|Raleway";
+@import "https://fonts.googleapis.com/css?family=Niramit|Poppins|Quicksand|Raleway";
+@import "https://fonts.googleapis.com/css?family=ABeeZee|Carrois+Gothic+SC|Didact+Gothic|Magra:700|Quattrocento+Sans|Tauri";
+@import "https://fonts.googleapis.com/css?family=Josefin+Sans|Noto+Sans+TC";
+@import "https://fonts.googleapis.com/css?family=Josefin+Sans|Noto+Sans+TC|Quicksand";
+@import "https://fonts.googleapis.com/css?family=Quicksand";
+
+
 
 body {
   width: 100%;
